[A128::CPU.C]: Implement more 128-bit specific opcodes.

--- a/ASM/DOC/ISA128.MD
+++ b/ASM/DOC/ISA128.MD
@@ -1,5 +1,5 @@
 # Aurora128 Instruction Set Reference
-**Revision:** 1.0.1
+**Revision:** 1.0.2
 
 **Architecture:** 128-bit RISC (Aurora Extended)
 
@@ -29,8 +29,14 @@ All instructions are 32-bit fixed width, regardless of the 128-bit data path.
 
 - `ADD Rd, Rs1, Rs2` : `Rd = Rs1 + Rs2` (128-bit carry propagation).
 - `SUB Rd, Rs1, Rs2` : `Rd = Rs1 - Rs2`.
-- `ADDI Rd, Rs1, Imm` : `Rd = Rs1 + SignExtend(Imm)`.
+- `ADDI Rd, Rs1, Imm` : `Rd = Rs1 + ZeroExtend(Imm)`.
 - `CLZ Rd, Rs1` : Count Leading Zeros. Returns the number of leading zeros in `Rs1` (0-128) into `Rd`.
+- `MOV128 Rd, Rs1` : Copies full 128-bit contents of `Rs1` to `Rd`.
+
+### Barrel Shifter
+
+- `SLL Rd, Rs1, Rs2` : Logical Shift Left `Rd` by the value in `Rs2.Low` (Masked to 7-bits).
+- `SRL Rd, Rs1, Rs2` : Logical Shift Right `Rd` by the value in `Rs2.Low`. 
 
 ### Memory Access
 
@@ -43,6 +49,10 @@ All instructions are 32-bit fixed width, regardless of the 128-bit data path.
 	- Atomically compares `Memory[Rs1]` with `Rs2`.
 	- If equal, `Memory[Rs1] = Rd`
 	- Always returns the original value of `Memory[Rs1]` into `Rd`.
+
+- `AMOADD Rd, Rs1, Rs2` : Atomic Memory Add.
+	- Atomically: `temp = Memory[Rs1]`, `Memory[Rs1] += Rs2`
+	- Returns `temp` (original value) into `Rd`.
 
 ### Control Flow
 
@@ -67,4 +77,6 @@ The vector table starts at `0xF000` in the 1MB physical map (expandable).
 | 1      | INT_KBD   | Keyboard Input                    |
 | 2      | INT_SYS   | Software Syscall                  |
 | 3      | INT_MM    | Memory Management / Page Fault    |
+| 4      | INT_DISK  | Disk Management                   |
+| 5      | INT_PTR   | Mouse Input                       |
 | 15     | INT_INV   | Invalid Opcode / Exception        |
